--- a/layouts/docs/single.html
+++ b/layouts/docs/single.html
@@ -20,7 +20,7 @@
     </div>
     <div class="middle-div">
         <div class="header-div">
-            <a href="{{ site.Home.RelPermalink }}"><img src="{{ .Site.Params.logo | relURL }}" alt="{{ .Site.Title }}" class="logo"></a>
+            <a href="{{ site.Home.RelPermalink }}"><img data-src="{{ .Site.Params.logo | relURL }}" alt="{{ .Site.Title }}" class="logo"></a>
         </div>
         <div class="content-div">
             <div class="md-body">
