--- a/layouts/contribution/list.html
+++ b/layouts/contribution/list.html
@@ -16,7 +16,7 @@
         {{ range .topType }}
             <li>
                 <div class='title'>
-                    <img src="{{ .icon1 | relURL }}" alt="">
+                    <img data-src="{{ .icon1 | relURL }}" alt="">
                     <p>{{ .name }}</p>
                 </div>
                 <div class='line'></div>
@@ -27,7 +27,7 @@
                     </li>
                     {{ end }}
                 </ul>
-                <img class='bottom-img' src="{{ .icon2 | relURL }}" alt="">
+                <img class='bottom-img' data-src="{{ .icon2 | relURL }}" alt="">
             </li>
         {{ end }}
         </ul>
@@ -37,19 +37,19 @@
             <h2 class="title-black-h2">{{ .topic }}</h2>
             <div>
                 <div class='top-div'>{{ .name }}</div>
-                <img src="{{ .icon | relURL }}" alt="">
+                <img data-src="{{ .icon | relURL }}" alt="">
                 <ul class="common-flex-layout">
                     {{ range $index, $element := .type }}
                     <li>
                         <div>
-                            <img src="{{ .icon | relURL }}" alt="">
+                            <img data-src="{{ .icon | relURL }}" alt="">
                             <span>{{ .name }}</span>
                         </div>
                         {{ if .children }}
                         <ul>
                             {{ range .children }}
                             <li class="">
-                                <img src="{{ $topIcon | relURL }}" alt="">
+                                <img data-src="{{ $topIcon | relURL }}" alt="">
                                 <div>{{ .name }}</div>
                                 {{ if eq $index 1}}
                                 <p class='left'>{{ .content }}</p>
@@ -85,7 +85,7 @@
             {{ $icon = $element.iconActive }}
             {{ end }}
             <li class="{{ $active }}" data-info='{{ . | jsonify }}' data-index='{{ $index }}'>
-                <img src="{{ $icon | relURL }}" alt="">
+                <img data-src="{{ $icon | relURL }}" alt="">
                 <p>{{ $element.name }}</p>
             </li>
             {{ end }}
@@ -95,7 +95,7 @@
         {{ with $first := index .children 0}}
         <div>
             <div class='btn-change btn-left' data-num='-1'></div>
-            <img class='bottom-img' src="{{ .iconActive | relURL }}" alt="">
+            <img class='bottom-img' data-src="{{ .iconActive | relURL }}" alt="">
             <div class='btn-change btn-right' data-num='1'></div>
         </div>
         <a class="common-green-a" href="{{ .link }}" target="_blank" rel="noopener noreferrer">{{ .linkContent }}</a>
@@ -103,7 +103,7 @@
         <ul>
             {{ range .children }}
             <li>
-                <img src="{{ .icon | relURL }}" alt="">
+                <img data-src="{{ .icon | relURL }}" alt="">
             </li>
             {{ end }}
         </ul>
@@ -114,12 +114,12 @@
 
 <section class='section-4'>
     {{ with .Params.section4.involved }}
-    <img src="/images/contribution/involve-bg.jpg" alt="">
+    <img data-src="/images/contribution/involve-bg.jpg" alt="">
     <h2 class="title-white-h2 ">{{ .title }}</h2>
     <div  class="common-flex-layout">
         {{ range .children}}
         <div>
-            <img src="{{ .icon | relURL }}" alt="">
+            <img data-src="{{ .icon | relURL }}" alt="">
             <h3 class="title-white-h3">{{ .title }}</h3>
             <p class="common-center-p">{{ .content }}</p>
             <div>
@@ -138,7 +138,7 @@
         <ul>
             {{ range .list }}
             <li>
-                <img src="{{ .icon }}" alt="">
+                <img data-src="{{ .icon }}" alt="">
             </li>
             {{ end }}
         </ul>
@@ -196,7 +196,7 @@
         var ul = bottomDiv.find('ul')
         ul.empty()
         $.each(info.children, function( key, value ) {
-            ul.append('<li><img src="' + value.icon + '" alt="" ></li>');
+            ul.append('<li><img data-src="' + value.icon + '" alt="" ></li>');
         });
     }
 
