--- a/layouts/contribution/list.html
+++ b/layouts/contribution/list.html
@@ -16,7 +16,7 @@
         {{ range .topType }}
             <li>
                 <div class='title'>
-                    <img data-src="{{ .icon1 | relURL }}" alt="">
+                    <img data-src="{{ .icon1 | relURL }}" alt="{{ .name }}">
                     <p>{{ .name }}</p>
                 </div>
                 <div class='line'></div>
@@ -27,7 +27,7 @@
                     </li>
                     {{ end }}
                 </ul>
-                <img class='bottom-img' data-src="{{ .icon2 | relURL }}" alt="">
+                <img class='bottom-img' data-src="{{ .icon2 | relURL }}" alt="{{ i18n "background image"}}">
             </li>
         {{ end }}
         </ul>
@@ -37,19 +37,19 @@
             <h2 class="title-black-h2">{{ .topic }}</h2>
             <div>
                 <div class='top-div'>{{ .name }}</div>
-                <img data-src="{{ .icon | relURL }}" alt="">
+                <img data-src="{{ .icon | relURL }}" alt="{{ .name }}">
                 <ul class="common-flex-layout">
                     {{ range $index, $element := .type }}
                     <li>
                         <div>
-                            <img data-src="{{ .icon | relURL }}" alt="">
+                            <img data-src="{{ .icon | relURL }}" alt="{{ .name }}">
                             <span>{{ .name }}</span>
                         </div>
                         {{ if .children }}
                         <ul>
                             {{ range .children }}
                             <li class="">
-                                <img data-src="{{ $topIcon | relURL }}" alt="">
+                                <img data-src="{{ $topIcon | relURL }}" alt="{{ .name }}">
                                 <div>{{ .name }}</div>
                                 {{ if eq $index 1}}
                                 <p class='left'>{{ .content }}</p>
@@ -85,7 +85,7 @@
             {{ $icon = $element.iconActive }}
             {{ end }}
             <li class="{{ $active }}" data-info='{{ . | jsonify }}' data-index='{{ $index }}'>
-                <img data-src="{{ $icon | relURL }}" alt="">
+                <img data-src="{{ $icon | relURL }}" alt="{{ .name }}">
                 <p>{{ $element.name }}</p>
             </li>
             {{ end }}
@@ -114,12 +114,12 @@
 
 <section class='section-4'>
     {{ with .Params.section4.involved }}
-    <img data-src="/images/contribution/involve-bg.jpg" alt="">
+    <img data-src="/images/contribution/involve-bg.jpg" alt="{{ i18n "background image" }}">
     <h2 class="title-white-h2 ">{{ .title }}</h2>
     <div  class="common-flex-layout">
         {{ range .children}}
         <div>
-            <img data-src="{{ .icon | relURL }}" alt="">
+            <img data-src="{{ .icon | relURL }}" alt="{{ .title }}">
             <h3 class="title-white-h3">{{ .title }}</h3>
             <p class="common-center-p">{{ .content }}</p>
             <div>
@@ -135,10 +135,11 @@
     <div class="common-layout">
         {{ with .Params.section5 }}
         <h2 class="title-black-h2">{{ .title }}</h2>
+        {{ $alt := .title }}
         <ul>
             {{ range .list }}
             <li>
-                <img data-src="{{ .icon }}" alt="">
+                <img data-src="{{ .icon }}" alt="{{ $alt }}">
             </li>
             {{ end }}
         </ul>
@@ -196,7 +197,7 @@
         var ul = bottomDiv.find('ul')
         ul.empty()
         $.each(info.children, function( key, value ) {
-            ul.append('<li><img data-src="' + value.icon + '" alt="" ></li>');
+            ul.append('<li><img src="' + value.icon + '" alt="" ></li>');
         });
     }
 
