--- a/layouts/contribution/request.html
+++ b/layouts/contribution/request.html
@@ -19,7 +19,7 @@
 </section>
 
 <section class='section-4' style="min-height: 445px; padding-bottom: 0;">
-  <img data-src="/images/contribution/involve-bg.jpg" alt="">
+  <img src="/images/contribution/involve-bg.jpg" alt="">
 </section>
 
 {{ end }}
