--- a/layouts/docs/list.html
+++ b/layouts/docs/list.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <a href="{{ site.Home.RelPermalink }}"><img data-src="{{ .Site.Params.logo | relURL }}" alt="{{ .Site.Title }}" class="logo"></a>
+        <a href="{{ site.Home.RelPermalink }}"><img src="{{ .Site.Params.logo | relURL }}" alt="{{ .Site.Title }}" class="logo"></a>
         <div class="header-div">
             <h1>{{ i18n "introduction8" }}</h1>
             <p>{{ i18n "introduction9" }}</p>
