--- a/layouts/videos/list.html
+++ b/layouts/videos/list.html
@@ -98,7 +98,7 @@
     }
 
     var createVideoLi = function(video) {
-        var img = '<img data-src="' + video.snapshot + '" alt="background image">'
+        var img = '<img src="' + video.snapshot + '" alt="background image">'
         var button = '<img class="btn" src="/images/videos/play.svg" alt="play button">'
         var title = '<h3>' + video.title + '</h3>'
         var group = '<p>' + video.group + '</p>'
