--- a/layouts/partials/openSource.html
+++ b/layouts/partials/openSource.html
@@ -20,7 +20,7 @@
     {{ $menus := (index .Site.Menus.main 1).Children }}
     {{ range $menus }}
     <li class="">
-      <a {{ if eq $section .URL }} class="active"{{ end }} href="{{ .URL | relLangURL }}">{{ .Name }}</a>
+      <a {{ if hasPrefix .URL $section }} class="active"{{ end }} href="{{ .URL | relLangURL }}">{{ .Name }}</a>
     </li>
     {{ end }}
   </ul>
