--- a/layouts/partner/list.html
+++ b/layouts/partner/list.html
@@ -15,32 +15,32 @@
         <div class="left-div">
             <div class="common-content">{{ .title }}</div>
             <p class="common-p">{{ .content }}</p>
-            <img class='img-1' data-src="{{ .bg2 | relURL }}" alt="{{ i18n "icon" }}">
-            <img class='img-2' data-src="{{ .bg3 | relURL }}" alt="{{ i18n "icon" }}">
+            <img class='img-1' src="{{ .bg2 | relURL }}" alt="{{ i18n "icon" }}">
+            <img class='img-2' src="{{ .bg3 | relURL }}" alt="{{ i18n "icon" }}">
         </div>
         <div class="right-div">
-            <img data-src="{{ .mapImage | relURL }}" alt="{{ .title }}">
+            <img src="{{ .mapImage | relURL }}" alt="{{ .title }}">
             <div class='btn-div div-1'>
                 <p>{{ .name1 }}</p>
                 <div>
-                    <img data-src="{{ .icon1 | relURL }}" alt="{{ .name1 }}">
+                    <img src="{{ .icon1 | relURL }}" alt="{{ .name1 }}">
                 </div>
             </div>
             <div class='btn-div div-2'>
                 <p>{{ .name2 }}</p>
                 <div>
-                    <img data-src="{{ .icon2 | relURL }}" alt="{{ .name2 }}">
+                    <img src="{{ .icon2 | relURL }}" alt="{{ .name2 }}">
                 </div>
             </div>
             <div class='btn-div div-3'>
                 <p>{{ .name3 }}</p>
                 <div>
-                    <img data-src="{{ .icon3 | relURL }}" alt="{{ .name3 }}">
+                    <img src="{{ .icon3 | relURL }}" alt="{{ .name3 }}">
                 </div>
             </div>
         </div>
     </div>
-    <img data-src="{{ .bg1 | relURL }}" alt="{{ i18n "icon" }}">
+    <img src="{{ .bg1 | relURL }}" alt="{{ i18n "icon" }}">
     {{ end }}
 </section>
 
@@ -71,7 +71,7 @@
         <ul class="partner-ul">
             {{ range .featuredPartnerList }}
                 <li>
-                    <img data-src="{{ .icon | relURL }}" alt="{{ .content }}">
+                    <img src="{{ .icon | relURL }}" alt="{{ .content }}">
                     <div class='type'>{{ .partnerType }}</div>
                     <div class='content'>{{ .content }}</div>
                 </li>
