--- a/layouts/projects/list.html
+++ b/layouts/projects/list.html
@@ -17,7 +17,7 @@
                 {{ $name := .name }}
                 {{ range .children }}
                 <li data-name="{{ $name }}">
-                    <img data-src="{{ .icon | relURL }}" alt="{{ .title }}">
+                    <img src="{{ .icon | relURL }}" alt="{{ .title }}">
                     <a href="{{ .link }}" target="_blank" rel="noopener noreferrer">{{ .title }}</a>
                     <p>{{ .description }}</p>
                     <div>
