--- a/layouts/blogs/single.html
+++ b/layouts/blogs/single.html
@@ -3,10 +3,10 @@
 {{- partial "head.html" . -}}
 
 {{ $style := resources.Get "scss/content.scss" | toCSS | minify | fingerprint }}
-<link rel="stylesheet" href="{{ $style.Permalink }}">
+<link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
 {{ $style := resources.Get "scss/markdown.scss" | toCSS | minify | fingerprint }}
-<link rel="stylesheet" href="{{ $style.Permalink }}">
+<link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
 <body>
 {{- partial "header.html" . -}}
