add share button

--- a/assets/scss/content.scss
+++ b/assets/scss/content.scss
@@ -61,6 +61,14 @@
         }
       }
 
+      .share-1 {
+        margin-bottom: 20px;
+      }
+
+      .share-2 {
+        margin-top: 20px;
+      }
+
       .content {
 
         .md-body {
