--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -211,3 +211,17 @@ section {
   background-position: center;
   background-repeat: no-repeat;
 }
+
+.share {
+  a {
+    margin-right: 10px;
+
+    img {
+      opacity: 0.8;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+}
