--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,8 +3,8 @@
     {{ if eq .Site.Language.Lang "zh"}}
     <div class="join-div">
         <div class="content">
-            👏 6 月 30 日 KubeSphere 3.0 发布会！带你一键解锁容器混合云！
-            <a href="https://datayi.cn/w/1P6jWZmP" target="_blank" rel="noopener noreferrer">免费报名线上直播 →</a>
+            👏 回看 KubeSphere 3.0 发布会视频！带你一键解锁容器混合云！
+            <a href="https://www.qingcloud.com/kubesphere2020#tz2" target="_blank" rel="noopener noreferrer">免费在线观看 →</a>
             <img id="close-join" src="/images/header/close.svg" alt="close">
         </div>
     </div>
@@ -47,7 +47,7 @@
                     <a href="{{ .URL }}" target="_blank" rel="noopener noreferrer">{{ .Name }}</a>
                     {{ else }}
                     <a href="{{ .URL | relLangURL }}">{{ .Name }}</a>
-                    {{ end }}                
+                    {{ end }}
                 </li>
                 {{ end }}
 
@@ -89,7 +89,7 @@
                     </li>
                 </ul>
             </div>
-        </div>      
+        </div>
     </div>
 
     <div id="modal-for-menu" class="modal">
@@ -187,7 +187,7 @@ var bindClickModalLi = function() {
             $(this).find('.dropdown-menu').slideUp(200)
         }
         $(this).find('.menu-span').toggleClass('up')
-    }) 
+    })
 }
 
 var bindClickClose = function() {
