add case number

--- a/assets/scss/footer.scss
+++ b/assets/scss/footer.scss
@@ -259,6 +259,10 @@
         letter-spacing: 1.08px;
         color: #242e42;
       }
+
+      .case {
+        margin-top: 20px;
+      }
     }
   }
 }
