--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -64,6 +64,25 @@
                     <a class='linkedin-a' href="{{ .Site.Params.linkedinLink }}" target="_blank" rel="noopener noreferrer"></a>
                 </div>
                 <p class='p1'>{{ i18n "introduction2" }}</p>
+                {{ if .Site.Params.showCaseNumber }}
+                <p class="case">
+                    <a
+                    href="http://www.beian.miit.gov.cn/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <span>京ICP备13019086号</span>
+                  </a>
+                  <a 
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=11010502041003"
+                  >
+                    <img src='/images/footer/case-icon.png' alt="备案图标"/>
+                    <span>京公网安备 11010502041003号</span>
+                  </a>
+                </p>
+                {{ end }}
             </div>
         </div>
     </div>
